# API-Biblioteca-EBAC

./: .gitignore  Dockerfile  README.md  biblioteca.db  docker-compose.yml  kafka_producer.py  main.py  pyproject.toml  tasks.py
